tests/rosetta/out/Smalltalk/active-directory-search-for-a-user.out
/tmp/active-directory-search-for-a-user.st:11: parse error, expected ']'
